--- a/style.css
+++ b/style.css
@@ -151,10 +151,20 @@ td{
     padding-right: 50px;
     background-color:  rgb(217,3,104) !important;
 }
+.texto-pie-pagina1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color:  rgb(217,3,104);
+}
 .texto-pie-pagina h2{
     font-size: 3em !important;
-    background-color:  rgb(217,3,104) !important;
+    background-color:  rgb(217,3,104);
     margin-right: 20px;
+}
+.texto-pie-pagina1 h3{
+    background-color:  rgb(217,3,104) ;
 }
 @media  screen and (max-width:992px){
     .card-text-detallada{
@@ -164,6 +174,68 @@ td{
         flex-direction: column !important;
     }
 }
+@media screen and (max-width: 991px) and (min-width:667px){
+    h2.titulo-carrusel {
+        font-size: 2.2em !important;
+    }
+    .iconos-redes.col a{
+        width: 45px;
+        height: 45px;
+        margin: 2.5px;
+    }
+    .iconos-redes i{
+        font-size: 1.5rem;
+    }
+    .texto-pie-pagina h2{
+        font-size: 2em !important;
+        margin-right: 20px;
+    }
+    .texto-pie-pagina1 h3{
+        font-size: 1.5rem !important;
+    }
+    th{
+        font-size: 1.5rem;
+    }
+    td{
+        font-size: 0.9rem;
+    }
+}
+@media screen and (max-width: 668px) {
+    h2.titulo-carrusel {
+        font-size: 1.5em !important;
+    }
+    .form-check-inline{
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem !important;
+        margin-right: 0.5rem !important;
+    }
+    .iconos-redes.col a{
+        width: 35px;
+        height: 35px;
+        margin: 1.5px;
+    }
+    .iconos-redes i{
+        font-size: 1.2rem;
+    }
+    .texto-pie-pagina h2{
+        font-size: 1.5em !important;
+        margin-right: 20px;
+    }
+    .texto-pie-pagina1 h3{
+        font-size: 1rem !important;
+    }
+    th{
+        font-size: 1.1rem;
+    }
+    td{
+        font-size: 0.6rem;
+    }
+    .caja-contato-fila{
+        min-width: 250px;
+    }
+}
+    
+
 
 
 
